# borg-assessment

./: .dockerignore  .env.sample  .gitignore  docker-compose.yml  readme.adoc
app/: __init__.py
app/borg/: repository.py  routes.py  schemas.py
app/borg/tests/: tests.py
app/core/: models.py  redis.py
borg-project/: .env.sample  Dockerfile  entrypoint.sh  pyproject.toml
borg-project/app/: conftest.py  main.py
borg-project/app/borg/: dependencies.py  models.py  routes.py  schemas.py  services.py  validators.py
borg-project/app/borg/tests/: tests.py
borg-project/app/borg/tests/data/: data.json
borg-project/app/core/: config.py  db.py
borg-project/app/routers/v1/: endpoints.py
borg-project/app/users/: models.py
borg-project/migrations/versions/: 31cfaaeadb33_create_url_and_user.py
docker/: Dockerfile
migrations/: env.py
