[tool.poetry]
name = "borg-assessment"
version = "0.1.0"
description = ""
authors = ["Daniel Ale <danielale9291@gmail.com>"]
readme = "README.md"
# packages = [{include = "borg_assessment"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.96.0"}
sqlmodel = "^0.0.8"
alembic = "^1.11.1"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
redis = {extras = ["hiredis"], version = "^4.5.5"}
pytest = "^7.3.1"
httpx = "^0.24.1"
pytest-asyncio = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
